Add a Maven benchmark launcher for JMH
Configure exec-maven-plugin to run the JMH main class on the test
classpath with preview features enabled.

Allow the benchmark regex, extra JMH options, and ClickBench hits path
to be passed as Maven properties so benchmarks can be launched with a
simple Maven command instead of a manually assembled classpath.